# FinLit

./: .dockerignore  .env.example  .gitignore  .python-version  LICENSE  README  README.md  README.qmd  WARP.md  auth.py  database.py  docker-compose.yml  main.py  market_simulator.py  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: codeql.yml
Artemis Agentic Memory Layer(MCP)/: docker-compose.yml  main.py  package-lock.json  package.json  pyproject.toml
Artemis Agentic Memory Layer(MCP)/src/utils/: logger.ts
backend/: .env.example  auth.py  chatbot.py  database.py  main.py  market_simulator.py  models.py  pyproject.toml
frontend/: .env.local.example  next.config.js  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/callback/: route.ts
frontend/src/components/: AuthForm.tsx  ChatbotWidget.tsx  PortfolioDashboard.tsx  TradeForm.tsx
supabase/migrations/: 0001_initial_schema.sql
tests/: noSecrets.test.js
