[project]
name = "financial-literacy-with-semantic-loop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.7"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.117.1",
    "openai>=1.109.1",
    "pandas>=2.3.2",
    "pydantic>=2.11.9",
    "python-dotenv>=1.0.1",
    "supabase>=2.20.0",
]
